<resources>
    <string name="picture_camera_roll">相机胶卷</string>
    <string name="picture_camera_roll_num">%1$s (%2$d)</string>
    <string name="picture_cancel">取消</string>
    <string name="picture_take_picture">拍摄</string>
    <string name="picture_rule">不能同时选择图片或视频</string>
    <string name="picture_message_max_num">你最多只能选择%1$s张照片</string>
    <string name="picture_min_video_num">视频最低选择不能少于%1$s个</string>
    <string name="picture_message_video_max_num">你最多只能选择%1$s个视频</string>
    <string name="picture_message_audio_max_num">你最多只能选择%1$s个音频</string>
    <string name="picture_preview">预览</string>
    <string name="picture_please">请稍候…</string>
    <string name="picture_done_front_num">%1$d/%2$d 完成</string>
    <string name="picture_completed">已完成</string>
    <string name="picture_done">完 成</string>
    <string name="picture_please_select">请选择</string>
    <string name="picture_empty_title">无视频或照片\n</string>
    <string name="picture_empty_audio_title">无音频文件\n</string>
    <string name="picture_empty">你可以使用相机拍摄照片或视频</string>
    <string name="picture_audio_empty">你可以使用系统录音录制音频</string>
    <string name="picture_min_img_num">图片最低选择不能少于%1$s张</string>
    <string name="picture_gif_tag">动图</string>
    <string name="picture_jurisdiction">读取内存卡权限被拒绝</string>
    <string name="picture_camera">获取系统相机权限被拒绝</string>
    <string name="picture_audio">获取系统录音权限被拒绝</string>
    <string name="picture_video_toast">视频不可预览</string>
    <string name="picture_record_video">录视频</string>
    <string name="picture_photograph">拍照</string>
    <string name="picture_long_chart">长图</string>
    <string name="picture_warning">暂无媒体文件！</string>
    <string name="picture_prompt">提示</string>
    <string name="picture_prompt_content">是否保存图片至手机？</string>
    <string name="picture_save_error">图片保存失败</string>
    <string name="picture_save_success">图片保存成功至</string>
    <string name="picture_all_audio">所有音频</string>
    <string name="picture_tape">录音</string>
    <string name="picture_play_audio">播放</string>
    <string name="picture_stop_audio">停止</string>
    <string name="picture_quit_audio">退出</string>
    <string name="picture_pause_audio">暂停</string>
    <string name="picture_error">图片已损坏</string>
    <string name="picture_video_error">视频已损坏</string>
    <string name="picture_audio_error">音频已损坏</string>
    <string name="picture_confirm">确定</string>
    <string name="picture_preview_image_num">%1$d/%2$d</string>
    <string name="picture_not_crop_data">无可用裁剪数据</string>
    <string name="picture_original_image">原图 (%1$s)</string>
    <string name="picture_default_original_image">原图</string>
    <string name="picture_send">完成</string>
    <string name="picture_send_num">完成(%1$d/%2$d)</string>
    <string name="picture_preview_num">预览(%1$d)</string>
    <string name="picture_select">选择</string>
    <string name="picture_data_exception">获取相册数据异常…</string>
    <string name="picture_choose_max_seconds">最大只能选择 %1$ds 以内的视频</string>
    <string name="picture_choose_min_seconds">不能选择低于 %1$ds 内的视频</string>
    <string name="picture_choose_limit_seconds">只能选择 %1$ds 至 %2$ds内的视频</string>
    <string name="picture_go_setting">去设置</string>
    <string name="picture_know">我知道了</string>
    <string name="picture_data_null">这里空空如也…</string>
    <string name="picture_editor">编辑</string>
    <string name="picture_webp_tag">webp</string>

</resources>
