<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/titleViewBg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/picture_color_grey" />

    <RelativeLayout
        android:id="@+id/rlAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/picture_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxEms="8"
            android:maxLines="1"
            android:text="@string/picture_camera_roll"
            android:textColor="@color/picture_color_white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/picture_title"
            android:scaleType="centerInside"
            android:src="@drawable/picture_icon_wechat_down" />

    </RelativeLayout>

    <TextView
        android:id="@+id/picture_right"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/picture_cancel"
        android:textColor="@color/picture_color_white"
        android:textSize="14sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/picture_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/picture_send_button_default_bg"
        android:gravity="center"
        android:text="@string/picture_send"
        android:textColor="@color/picture_color_53575e"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/pictureLeftBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/titleViewBg"
        android:layout_alignBottom="@id/titleViewBg"
        android:padding="15dp"
        android:src="@drawable/picture_icon_close" />
</merge>

